# fswatcher

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  config.yaml  fswatcher_template.service  install.py  pyproject.toml  requirements.txt  sdc_aws_fswatcher.py  sdc_aws_fswatcher_template.service  setup.py  uninstall.py
fswatcher/: FileSystemHandler.py  FileSystemHandlerConfig.py  FileSystemHandlerEvent.py  __init__.py  __main__.py
scripts/: Dockerfile  fswatcher.config  fswatcher.env  fswatcher_config.sh  run_docker_container.py  run_docker_container.sh
sdc_aws_fswatcher/: FileSystemHandler.py  FileSystemHandlerConfig.py  FileSystemHandlerEvent.py  __main__.py  sdc_aws_fswatcher.py  util.py
tests/: test_main.py
