[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "fswatcher/_version.py"

[project]
name = "fswatcher"
version = "0.1.0"
description = "AWS File System Watcher"
authors = [
    {name = "Damian Barrous-Dume", email = "dbarrous@navteca.com"}
]
packages = ["fswatcher"]
include_package_data = true
entry_points = [
    { group = "console_scripts", text = "fswatcher = fswatcher.fswatcher:main" }
]

[project.dependencies]
watchdog = "2.2.0"
boto3 = "1.26.35"
slack_sdk = "3.19.5"
sdc_aws_utils = {git = "https://github.com/HERMES-SOC/sdc_aws_utils.git"}

[project.optional-dependencies]
# Add optional dependencies as needed